--- a/style.css
+++ b/style.css
@@ -1,12 +1,91 @@
-main{
-    background-color:aliceblue
+header{
+    background-color:rgb(233, 233, 233);
+    padding: 20px;
 }
-body {
-background-color: bisque;
+
+nav li {
+    display: inline;
+    margin: 0 0 0 15px;
 }
-p{
-    color:black
+nav a {
+    text-transform: uppercase;
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
 }
-#banner{
-    width: 100%;
+nav a:hover{
+    color: rgb(149, 203, 197);
+    text-decoration: underline;
+}
+#logo{
+    width: 250px;
+}
+.caixa{
+    position: relative;
+    width: 950px;
+    margin: 0 auto;
+}
+nav{
+    position: absolute;
+    top: 110px;
+    right:0 ;
+}
+.produtos{
+    width: 940px;
+    margin: 0 auto;
+    padding: 50px 0;
+}
+.produtos li{
+    display: inline-block;
+    text-align: center;
+    width: 30%;
+    vertical-align: top;
+    margin: 0 1 .5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    border: 2px solid #000000;
+    border-radius: 10px;
+}
+.produtos li:hover {
+    border-color: rgb(149, 203, 197);
+}
+.produtos li:active{
+    border-color: rgb(255, 0, 0);
+}
+
+.produtos li:hover h2{
+    font-size: 34px;
+    color:rgb(149, 203, 197);
+}
+
+.produtos h2 {
+    font-size: 30px;
+    font-weight: bold;
+
+}
+.produtos-descricao{
+    font-size: 18px;
+
+}
+.produtos-preco {
+    font-size: 22px;
+    font-weight: bolder;
+    margin-top: 10px;
+}
+
+footer {
+    text-align: center;
+    background-color: rgb(233, 233, 233);
+    padding: 40px 0;
+}
+
+footer img{
+    width: 200px;
+}
+
+.copyright{
+    color:black;
+    font-size: 13px;
+    margin: 20px 0 0;
 }
