--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ nav{
     border-color: rgb(149, 203, 197);
 }
 .produtos li:active{
-    border-color: rgb(255, 0, 0);
+    border-color: rgb(149, 203, 197);;
 }
 
 .produtos li:hover h2{
@@ -89,3 +89,30 @@ footer img{
     font-size: 13px;
     margin: 20px 0 0;
 }
+
+main {
+    width: 940px;
+    margin: 0 auto;
+}
+
+form {
+    margin: 50px 0;
+}
+
+form label, form p {
+    display: block;
+    font-size: 20px;
+    margin: 0 0 10px;
+}
+
+.input-padrao {
+    display: block;
+    margin: 0 0 20px;
+    padding: 10px 25px;
+    width: 50%;
+}
+
+.checkbox {
+    margin: 20px 0
+}
+
