--- a/style.css
+++ b/style.css
@@ -116,3 +116,32 @@ form label, form p {
     margin: 20px 0
 }
 
+table {
+    margin: 20px 0 40px;
+
+}
+
+thead {
+    background: #555555;
+    color:cadetblue;
+    font-weight: bold;
+}
+
+td, th {
+    border: 1px solid #000000;
+    padding: 8px 15px;
+}
+
+.mapa {
+    padding: 3EM 0;
+    text-align: center;
+}
+
+.mapa p {
+    margin: 0 0 2em;
+}
+
+.video {
+    width: 560px;
+    margin: 1em auto;
+}
